--- a/frontend/src/pages/Messages/messages.scss
+++ b/frontend/src/pages/Messages/messages.scss
@@ -1,6 +1,6 @@
 .messagesContainer {
    background-color: #fff;
-   margin-top: 80px;
+  margin-top: 150;
    min-height: 100vh;
    width: 100%;
 }
